untested, but looks decent

--- a/websockets-rpc.cabal
+++ b/websockets-rpc.cabal
@@ -27,6 +27,7 @@ Library
                       , stm
                       , text
                       , unordered-containers
+                      , wai-transformers
                       , websockets
 
 Test-Suite spec
