--- a/websockets-rpc.cabal
+++ b/websockets-rpc.cabal
@@ -1,11 +1,12 @@
 Name:                   websockets-rpc
-Version:                0.0.0
+Version:                0.0.1
 Author:                 Athan Clark <athan.clark@gmail.com>
 Maintainer:             Athan Clark <athan.clark@gmail.com>
 License:                BSD3
 License-File:           LICENSE
 Synopsis:               Simple streaming RPC mechanism using WebSockets
 -- Description:
+Category:               Web
 Cabal-Version:          >= 1.10
 Build-Type:             Simple
 
@@ -25,9 +26,9 @@ Library
                         Network.WebSockets.RPC.Types
                         Network.WebSockets.RPC.Trans.Client
                         Network.WebSockets.RPC.Trans.Server
-  -- Other-Modules:        Network.WebSockets.RPC.Internal
   Build-Depends:        base >= 4.8 && < 5
                       , aeson
+                      , async
                       , bytestring
                       , containers
                       , exceptions
