--- a/websockets-rpc.cabal
+++ b/websockets-rpc.cabal
@@ -43,8 +43,8 @@ Library
                       , unordered-containers
                       , uuid
                       , wai-transformers
-                      , websockets
-                      , websockets-simple
+                      , websockets >= 0.11
+                      , websockets-simple >= 0.0.2.1
 
 Test-suite test
   Type:                 exitcode-stdio-1.0
