--- a/websockets-rpc.cabal
+++ b/websockets-rpc.cabal
@@ -1,5 +1,5 @@
 Name:                   websockets-rpc
-Version:                0.4.1
+Version:                0.5.0
 Author:                 Athan Clark <athan.clark@gmail.com>
 Maintainer:             Athan Clark <athan.clark@gmail.com>
 License:                BSD3
@@ -44,7 +44,7 @@ Library
                       , uuid
                       , wai-transformers
                       , websockets >= 0.11
-                      , websockets-simple >= 0.0.2.1
+                      , websockets-simple >= 0.0.2.2
 
 Test-suite test
   Type:                 exitcode-stdio-1.0
@@ -79,6 +79,7 @@ Executable example
                       , mtl
                       , wai-transformers
                       , websockets
+                      , websockets-simple
 
 Executable example-client
   if flag(Example)
@@ -98,6 +99,7 @@ Executable example-client
                       , mtl
                       , wai-transformers
                       , websockets
+                      , websockets-simple
 
 Source-Repository head
   Type:                 git
